--- a/azenor.html
+++ b/azenor.html
@@ -307,17 +307,20 @@ main{
 <p>Azénor ne se trouvait pas particulièrement jolie. Elle ne possédait pas de longs cheveux blonds soyeux, des yeux immenses et purs, une peau pâle et délicate, une allure majestueuse, vertueuse, mais réservée et modeste… Non, Azénor n’incarnait aucune de ces qualités. Ou plutôt bien plus que tout cela.</p><p>Azénor imposait un regard pénétrant et magnétique. Son teint hâlé évoquait des terres baignées de soleil. Ses yeux sombres, presque noirs, reflétaient une intelligence perçante, une curiosité insatiable. Ses cheveux bruns, épais et indomptés, tombaient en vagues naturelles autour de son visage. Elle les portait souvent défaits, non par vanité, mais par indifférence aux codes de son époque.</p><p>Azénor n’était pas très grande, mais sa silhouette restait fine et nerveuse. Elle s’habillait toujours simplement, enfilant une longue robe ample, appelée « léine », qui atteignait ses chevilles et avait une teinte ocre. Par-dessus, elle ajoutait une sorte de cape carrée, nommée « brat », fixée à ses épaules par une broche. Une ceinture tissée à laquelle était nouée une petite bourse de cuir ajustait sa léine à la taille. Elle portait au cou un collier de perles d’ambre, et au poignet un bracelet en bronze ancien aux motifs celtiques entrelacés, seul bijou qui lui venait de sa mère…</p><p>Fille unique, elle était aussi le fils qu’il aurait aimé avoir. Son père, le <a href="even.html" title="Even, comte breton du VIe siècle — personnage du Testament d’Azénor">Comte Even</a>, lui laissait fuir les activités convenant aux jeunes princesses de son rang pour des apprentissages réputés plus virils. Elle aimait marcher, souvent seule. La mer était son refuge. Une sorte de miroir qui restait pour elle une énigme, un point d’interrogation sur ses propres racines.</p>
 </div>
 </section>
-  <h2>Entre histoire et mythe : une liberté assumée</h2>
+<section class="character-context">
 
-<p>Ce roman n’est ni une thèse, ni une tentative de restitution définitive d’un VI<sup>e</sup> siècle insaisissable. Il est né d’un dialogue entre les sources et l’imaginaire. Les textes anciens — hagiographies, chroniques, légendes — ne sont pas ici traités comme des archives figées, mais comme des récits vivants, porteurs d’une mémoire et d’une vision du monde.</p>
+<h3>Qui est Azénor&nbsp;?</h3>
+<p>Azénor est l’héroïne centrale du roman <em>Le Testament d’Azénor</em>. Inspirée d’une figure issue de la tradition bretonne, elle incarne une génération prise entre héritage celtique et christianisation naissante au VI<sup>e</sup> siècle.</p>
 
-<p>Mon travail n’a pas consisté à combler les silences par des certitudes, mais à habiter ces silences. Là où les sources divergent, se contredisent ou se taisent, la fiction prend le relais. Non pour corriger l’histoire, mais pour en explorer les possibles humains : les doutes, les tensions spirituelles, les ambitions politiques, les fragilités intimes.</p>
+<p>Fille du <a href="even.html">comte Even</a>, elle grandit dans un monde traversé par des tensions politiques et spirituelles. Son parcours mêle quête d’identité, loyauté familiale et confrontation aux mutations religieuses de son époque.</p>
 
-<p>Le mythe, dans cette perspective, n’est pas l’opposé de l’histoire. Il en est parfois la trace la plus durable. La légende d’Azénor, comme celle de saint Budoc ou les récits du <em>Lebor Gabála Érenn</em>, constitue moins un document qu’un horizon symbolique. C’est dans cet espace intermédiaire — entre le vraisemblable et le transmis — que le roman trouve sa place.</p>
+<h3>Azénor dans la légende et dans le roman</h3>
+<p>La légende d’Azénor, transmise notamment par les <a href="veritable-legende-azenor.html">sources hagiographiques bretonnes</a>, évoque une destinée marquée par l’exil et la foi. Le roman en propose une interprétation romanesque, ancrée dans un contexte historique plus large, où les choix individuels se heurtent aux recompositions d’un monde en formation.</p>
 
-<p>J’assume donc pleinement la part de liberté qui traverse ces pages. Les personnages historiques côtoient des figures fictives ; des épisodes attestés s’entrelacent avec des scènes imaginées. L’objectif n’est pas de trancher les débats, mais de proposer une lecture sensible d’un monde en formation, où spiritualité, pouvoir et identité se redéfinissent.</p>
+<h3>Rôle dans l’intrigue</h3>
+<p>À travers Azénor, le récit explore les tensions entre tradition et rupture, autorité paternelle et liberté personnelle, croyance et doute. Son regard structure l’univers du roman et relie les différents lieux et personnages, des terres armoricaines aux influences venues d’Irlande.</p>
 
-<p>En ce sens, <em>Le Testament d’Azénor</em> est moins une reconstitution qu’une interprétation. Une manière d’interroger le passé pour éclairer des questions qui, elles, demeurent profondément contemporaines.</p>
+</section>
 </main>
 <footer class="site-footer">
 <div class="footer-inner">
