--- a/tadhgan.html
+++ b/tadhgan.html
@@ -301,6 +301,18 @@ main{
 <p>Tadhgán était un sage qui avait développé sa profonde compréhension du monde grâce à ses longues années consacrées à l’étude de textes anciens et à la réflexion sur les questions spirituelles. Il portait la tonsure scottique , ce signe distinctif des moines celtiques qui laissait le front dégagé. Tadhgán était de ceux que l’âge n’avait pas affaiblis, mais affinés. Son dos voûté par des années passées à copier des manuscrits lui donnait l’allure d’un homme fatigué, mais, dès qu’il relevait la tête, on voyait que son esprit était vif. Son visage était creusé de rides profondes, autant par le temps que par la réflexion. Ses yeux clairs brillaient d’une intelligence acérée, toujours en quête de savoir. Sa barbe blanche, longue et mal peignée, trahissait son indifférence aux apparences. Ce qui comptait pour lui était dans les livres, pas dans le reflet du miroir. Quand il était avec <a href="azenor.html" title="Azénor — héroïne du Testament d’Azénor">Azénor</a>, il posait plus de questions qu’il ne donnait de réponses, préférant l’amener à réfléchir plutôt que lui dicter une vérité révélée. Tadhgán n’aimait pas les esprits fermés. Il supportait mal les certitudes trop rigides et les dogmes imposés. Pour lui, croire ne suffisait pas : il fallait comprendre.</p><p>Il connaissait par cœur les Écritures, il était devenu sans aucun doute un érudit scripturaire, mais il connaissait aussi des textes bien plus archaïques, des poèmes gaéliques et des légendes celtiques.</p>
 </div>
 </section>
+  <section class="character-context">
+<h3>Qui est Tadhgán&nbsp;?</h3>
+<p>Tadhgán est l’un des personnages irlandais du roman <em>Le Testament d’Azénor</em>. Issu d’un monde façonné par les récits anciens et les traditions insulaires, il incarne le lien vivant entre l’Irlande et l’Armorique du VI<sup>e</sup> siècle.</p>
+
+<h3>Tadhgán et l’héritage irlandais</h3>
+<p>Son univers culturel est nourri par les récits fondateurs tels que le <a href="livre-des-conquetes.html">Livre des conquêtes d’Irlande</a> (<em>Lebor Gabála Érenn</em>). À travers lui, le roman explore la transmission des légendes et l’influence des moines irlandais en Bretagne.</p>
+
+<h3>Rôle dans l’intrigue</h3>
+<p>Tadhgán agit comme un passeur culturel. Sa relation avec <a href="azenor.html">Azénor</a> introduit une dimension de questionnement où curiosité intellectuelle et fidélité aux traditions s’entrecroisent.</p>
+
+
+</section>
 </main>
 <footer class="site-footer">
 <div class="footer-inner">
