--- a/guenole.html
+++ b/guenole.html
@@ -307,6 +307,20 @@ main{
 <p><em>— C’est une parure d’origine franque. Une sorte de trophée de guerre de mon père Fracan. Il l’avait offert à mon frère Guéthénoc, qui ne s’en séparait jamais. Il l’avait ensuite retouché pour tenter d’effacer les symboles païens et lui donner un sens chrétien.</em></p>
 </div>
 </section>
+  <section class="character-context">
+
+<h3>Guénolé : héritage familial et formation</h3>
+<p>Selon la <em>Vie de saint Guénolé</em>, il serait le fils de saint Fragan (ou Fracan) et de sainte Gwenn, famille venue probablement du pays de Galles pour s’établir en Armorique. La tradition situe leur arrivée dans la baie de Saint-Brieuc, et rattache leur installation à Ploufragan. Guénolé serait le troisième enfant d’une fratrie comprenant Clervie, Jacut et Guéthenoc.</p>
+
+<p>Encore enfant, il aurait été confié à <a href="budoc.html">saint Budoc</a>, sur l’île de <a href="lavret.html">Lavrec</a>, dans l’archipel de Bréhat. C’est là, au contact d’un monachisme insulaire encore marqué par l’ascèse et l’étude, que se forme celui qui deviendra l’une des figures majeures du christianisme breton.</p>
+
+<h3>De Lavrec à Landévennec</h3>
+<p>La tradition rapporte qu’il quitta Lavrec à l’âge d’environ vingt-deux ans. Un projet de pèlerinage en Irlande, afin d’honorer la mémoire de saint Patrick, aurait été abandonné après une vision en songe. Guénolé choisit finalement de demeurer en Armorique et d’y fonder une abbaye. Entouré de douze compagnons issus de l’école de Lavrec, il établit la communauté de Landévennec, appelée à devenir l’un des centres majeurs de la culture monastique bretonne.</p>
+
+<h3>Guénolé dans le roman</h3>
+<p>Le roman ne prétend pas restituer fidèlement ces traditions hagiographiques. Il s’en inspire pour dessiner un personnage traversé par les tensions de son époque&nbsp;: fidélité à l’héritage insulaire, nécessité d’organiser une Église naissante, confrontation aux pouvoirs locaux. À travers Guénolé, <em>Le Testament d’Azénor</em> explore la transformation d’une foi encore mouvante en une institution durable.</p>
+
+</section>
 </main>
 <footer class="site-footer">
 <div class="footer-inner">
