--- a/guenole.html
+++ b/guenole.html
@@ -318,7 +318,9 @@ main{
 <p>La tradition rapporte qu’il quitta Lavrec à l’âge d’environ vingt-deux ans. Un projet de pèlerinage en Irlande, afin d’honorer la mémoire de saint Patrick, aurait été abandonné après une vision en songe. Guénolé choisit finalement de demeurer en Armorique et d’y fonder une abbaye. Entouré de douze compagnons issus de l’école de Lavrec, il établit la communauté de Landévennec, appelée à devenir l’un des centres majeurs de la culture monastique bretonne.</p>
 
 <h3>Guénolé dans le roman</h3>
-<p>Le roman ne prétend pas restituer fidèlement ces traditions hagiographiques. Il s’en inspire pour dessiner un personnage traversé par les tensions de son époque&nbsp;: fidélité à l’héritage insulaire, nécessité d’organiser une Église naissante, confrontation aux pouvoirs locaux. À travers Guénolé, <em>Le Testament d’Azénor</em> explore la transformation d’une foi encore mouvante en une institution durable.</p>
+<p>Dans le roman, Guénolé apparaît d’abord comme un moine encore jeune, formé à l’école de Lavrec sous l’autorité de <a href="budoc.html">Budoc</a>. Lorsque les morts se succèdent et que la communauté vacille, Budoc, vieillissant et éprouvé, comprend que la situation lui échappe. Conscient de la finesse d’esprit et de la rigueur intellectuelle de son disciple, il lui confie alors le soin de mener l’enquête.</p>
+
+<p>Guénolé ne s’impose ni par l’autorité ni par la ferveur spectaculaire, mais par une intelligence méthodique et une capacité à relier les faits. À travers lui, le roman explore la naissance d’un esprit d’analyse au sein même d’un monde façonné par la foi et la tradition. Il incarne une génération qui devra affronter les crises de son temps sans pouvoir s’abriter derrière les certitudes anciennes.</p>
 
 </section>
 </main>
