--- a/umbertus.html
+++ b/umbertus.html
@@ -340,6 +340,23 @@ a.lien-discret-orange:focus{
   <a href="umberto.html" class="lien-discret-orange">Un visage étrangement familier, pour qui sait regarder de près.</a>
 </p>
 </section>
+  <section class="character-context">
+
+<h3>Un envoyé de Rome</h3>
+<p>Umbertus est mandaté à Aird Mhór pour veiller à la pureté de la foi. Son rôle dépasse la simple prédication&nbsp;: il représente l’autorité romaine dans un espace où le christianisme s’est développé selon des formes plus souples, marquées par l’héritage insulaire et celtique.</p>
+
+<h3>Orthodoxie et particularismes</h3>
+<p>Face à lui se dessine un christianisme moins centralisé, issu des traditions monastiques celtiques. Umbertus incarne la volonté d’unifier, de clarifier, d’aligner les pratiques sur une doctrine définie à Rome. Ce qui, pour certains, relève d’une fidélité à l’universel apparaît pour d’autres comme une remise en cause d’identités spirituelles locales.</p>
+
+<h3>La lutte contre les survivances</h3>
+<p>Sa mission consiste également à combattre les hérésies et à éradiquer les survivances païennes, notamment celles issues de la persistance des druides convertis. Il observe avec attention des figures comme <a href="tadhgan.html">Tadhgán</a>, conscient que la conversion ne supprime pas toujours les structures mentales anciennes.</p>
+
+<h3>Rôle dans l’intrigue</h3>
+<p>Dans le roman, Umbertus n’est ni un antagoniste caricatural ni un simple gardien de règles. Il incarne une tension historique réelle&nbsp;: celle de la rencontre parfois conflictuelle entre l’Église romaine et les formes celtiques du christianisme. Sa présence installe un débat permanent sur l’autorité, la tradition et la légitimité spirituelle.</p>
+
+<p>À travers lui, <em>Le Testament d’Azénor</em> interroge la manière dont une foi universelle se construit au prix de renoncements et d’unifications parfois douloureuses.</p>
+
+</section>
 </main>
 <footer class="site-footer">
 <div class="footer-inner">
