--- a/sorcieres.html
+++ b/sorcieres.html
@@ -309,6 +309,24 @@ main{
       </p>
 </div>
 </section>
+  </div>
+</section>
+
+<section class="character-context">
+
+<h3>Un héritage insulaire ancien</h3>
+<p>Les “trois sorcières” ne surgissent pas du néant. Leur figure s’inscrit dans une mémoire plus ancienne, évoquée dès l’Antiquité par l’auteur latin Pomponius Mela, qui mentionne l’île de Sena, habitée par neuf prêtresses capables de lever les tempêtes et de prédire l’avenir.</p>
+
+<p>Si l’identification géographique demeure discutée, la tradition bretonne a souvent rapproché cette île des terres du Ponant. Avec le temps, ces prêtresses sont devenues, dans le regard chrétien, des sorcières — non plus gardiennes d’un culte, mais survivances d’un monde ancien.</p>
+
+<h3>Résistance et mémoire</h3>
+<p>Dans le roman, Rozenn, Maod et Berc’hed ne sont pas les descendantes directes d’un druidisme intact. Elles incarnent plutôt la persistance d’un imaginaire insulaire, attaché aux cycles naturels et aux forces marines, au moment où l’unification chrétienne tente d’effacer ces traces.</p>
+
+<p>À travers elles se joue une confrontation entre mémoire et doctrine, entre continuité symbolique et volonté d’éradication.</p>
+
+</section>
+
+</main>
 </main>
 <footer class="site-footer">
 <div class="footer-inner">
