--- a/budoc.html
+++ b/budoc.html
@@ -299,6 +299,16 @@ main{
 <p>Budoc débarqua sur l’île de Lavrec avec l’impression d’avoir enfin atteint son but, même si tout restait à bâtir. Il s’agenouilla et bénit le lieu dans un geste d’une grande simplicité. Pendant ce temps, ses compagnons s’affairaient déjà à décharger les affaires du bateau. Budoc se retourna et vit Gurwan descendre maladroitement du currach avec le coffre… Budoc se précipita pour le récupérer avant qu’il ne tombe à l’eau.</p>
 </div>
 </section>
+  <section class="character-context">
+
+<h3>Budoc dans les sources hagiographiques</h3>
+<p>Les textes médiévaux ne présentent pas une figure unifiée de Budoc. Les <em>vitae</em> évoquent plusieurs traditions parfois difficiles à concilier. Dans la vie qui lui est consacrée, Budoc apparaît à la fin de son existence comme évêque de Dôl, successeur de saint Smason, sans qu’il soit fait mention de la fondation de l’école monastique de Lavret.</p>
+
+<p>À l’inverse, la <em>Vie de saint Guénolé</em> le présente comme le maître du jeune Guénolé et le fondateur de l’école de Lavret, dans l’archipel de Bréhat. Cette divergence suggère soit l’existence de plusieurs personnages distincts portant le même nom, soit une construction hagiographique progressive, mêlant traditions locales et recompositions ultérieures.</p>
+
+<p>Le roman s’inscrit dans cette zone d’incertitude. Il choisit d’explorer la figure du fondateur de Lavret, non pour trancher les débats historiques, mais pour donner chair à une mémoire fragmentaire, où l’histoire et la légende s’entrelacent.</p>
+
+</section>
 </main>
 <footer class="site-footer">
 <div class="footer-inner">
