--- a/budoc.html
+++ b/budoc.html
@@ -302,11 +302,11 @@ main{
   <section class="character-context">
 
 <h3>Budoc dans les sources hagiographiques</h3>
-<p>Les textes médiévaux ne présentent pas une figure unifiée de Budoc. Les <em>vitae</em> évoquent plusieurs traditions parfois difficiles à concilier. Dans la vie qui lui est consacrée, Budoc apparaît à la fin de son existence comme évêque de Dôl, successeur de saint Smason, sans qu’il soit fait mention de la fondation de l’école monastique de Lavret.</p>
+<p>Les textes médiévaux ne présentent pas une figure unifiée de Budoc. Les <em>vitae</em> évoquent plusieurs traditions parfois difficiles à concilier. Dans la vie qui lui est consacrée, Budoc aurait été à la fin de son existence évêque de Dôl, successeur de saint Samson (bien que d'autres sources désignent Saint Magloire), sans qu’il soit fait mention de la fondation de l’école monastique de Lavret.</p>
 
-<p>À l’inverse, la <em>Vie de saint Guénolé</em> le présente comme le maître du jeune Guénolé et le fondateur de l’école de Lavret, dans l’archipel de Bréhat. Cette divergence suggère soit l’existence de plusieurs personnages distincts portant le même nom, soit une construction hagiographique progressive, mêlant traditions locales et recompositions ultérieures.</p>
+<p>À l’inverse, la <em>Vie de saint Guénolé</em> le présente comme le maître du jeune Guénolé et le fondateur de l’école de Lavret, dans l’archipel de Bréhat. Cette divergence suggère  l’existence de plusieurs personnages distincts portant le même nom.</p>
 
-<p>Le roman s’inscrit dans cette zone d’incertitude. Il choisit d’explorer la figure du fondateur de Lavret, non pour trancher les débats historiques, mais pour donner chair à une mémoire fragmentaire, où l’histoire et la légende s’entrelacent.</p>
+<p>Le roman s’inscrit dans cette zone d’incertitude. Il suit la progression de Saint Budoc selon le récit de sa Vitae, mais choisit d’explorer la figure du fondateur de Lavret, pour donner chair à une mémoire fragmentaire, où l’histoire et la légende s’entrelacent.</p>
 
 </section>
 </main>
