--- a/personnages.html
+++ b/personnages.html
@@ -370,22 +370,60 @@ main{
 <h1>Les personnages</h1>
 <p class="intro">Les personnages du <strong>Testament d’Azénor</strong> apparaissent au fil du récit, entre histoire, légende et fiction.</p>
 <ul class="personnages-list">
+
 <li class="personnage">
-  <img 
-    src="/images/personnages/azenor-heroine-bretagne-vie-siecle.jpg"
-    alt="Azénor, héroïne bretonne du VIe siècle dans le roman Le Testament d’Azénor">
+  <img src="/images/personnages/azenor-heroine-bretagne-vie-siecle.jpg"
+       alt="Azénor, héroïne bretonne du VIe siècle dans le roman Le Testament d’Azénor">
   <a href="azenor.html">Azénor</a>
 </li>
-<li class="personnage"><img src="images/personnages/tadhgan.jpg"/><a href="tadhgan.html">Tadhgán</a></li>
-<li class="personnage"><img src="images/personnages/even.jpg"/><a href="even.html">Even</a></li>
-<li class="personnage"><img src="images/personnages/chunaire.jpg"/><a href="chunaire.html">Chunaire</a></li>
-<li class="personnage"><img src="images/personnages/umbertus.jpg"/><a href="umbertus.html">Umbertus</a></li>
-<li class="personnage"><img src="images/personnages/baithen.jpg"/><a href="baithen.html">Baithen</a></li>
-<li class="personnage"><img src="images/personnages/ruadhan.jpg"/><a href="ruadhan.html">Ruadhán</a></li>
-<li class="personnage"><img src="images/personnages/budoc.jpg"/><a href="budoc.html">Budoc</a></li>
-<li class="personnage"><img src="images/personnages/guenole.jpg"/><a href="guenole.html">Guenolé</a></li>
-<li class="personnage"><img src="images/personnages/sorcieres.jpg"/><a href="sorcieres.html">Les trois sorcières</a></li>
+
+<li class="personnage">
+  <img src="images/personnages/even.jpg" alt="Even">
+  <a href="even.html">Even</a>
+</li>
+
+<li class="personnage">
+  <img src="images/personnages/tadhgan.jpg" alt="Tadhgán">
+  <a href="tadhgan.html">Tadhgán</a>
+</li>
+
+<li class="personnage">
+  <img src="images/personnages/umbertus.jpg" alt="Umbertus">
+  <a href="umbertus.html">Umbertus</a>
+</li>
+
+<li class="personnage">
+  <img src="images/personnages/chunaire.jpg" alt="Chunaire">
+  <a href="chunaire.html">Chunaire</a>
+</li>
+
+<li class="personnage">
+  <img src="images/personnages/sorcieres.jpg" alt="Les trois sorcières">
+  <a href="sorcieres.html">Les trois sorcières</a>
+</li>
+
+<li class="personnage">
+  <img src="images/personnages/budoc.jpg" alt="Budoc">
+  <a href="budoc.html">Budoc</a>
+</li>
+
+<li class="personnage">
+  <img src="images/personnages/guenole.jpg" alt="Guénolé">
+  <a href="guenole.html">Guénolé</a>
+</li>
+
+<li class="personnage">
+  <img src="images/personnages/maodez.jpg" alt="Maodez">
+  <a href="maodez.html">Maodez</a>
+</li>
+
+<li class="personnage">
+  <img src="images/personnages/gwenc_hlan.jpg" alt="Gwenc’hlan">
+  <a href="gwenc_hlan.html">Gwenc’hlan</a>
+</li>
+
 </ul>
+
 </main>
 <footer class="site-footer">
 <div class="footer-inner">
