--- a/maodez.html
+++ b/maodez.html
@@ -52,9 +52,9 @@
 <div class="extrait excerpt">
 <h2 class="character-name">Maodez</h2>
 
-<p>"Maodez était un homme de haute stature, à la prestance naturelle. Noble de naissance, fils de roi, il portait dans son maintien l’empreinte d’une éducation rigoureuse et d’un héritage qu’il avait choisi de laisser derrière lui.</p>
+<p>Maodez était un homme de haute stature, à la prestance naturelle. Noble de naissance, fils de roi, il portait dans son maintien l’empreinte d’une éducation rigoureuse et d’un héritage qu’il avait choisi de laisser derrière lui.</p>
 
-<p>Ses traits, bien dessinés, manifestaient la gravité de ceux qui ont grandi avec la conscience du devoir. Il n’avait pas connu les tempêtes de la mer comme Baithen, ni l’errance comme Budoc, mais il avait affronté d’autres épreuves&nbsp;: celles du renoncement."</p>
+<p>Ses traits, bien dessinés, manifestaient la gravité de ceux qui ont grandi avec la conscience du devoir. Il n’avait pas connu les tempêtes de la mer comme Baithen, ni l’errance comme Budoc, mais il avait affronté d’autres épreuves&nbsp;: celles du renoncement.</p>
 
 </div>
 
