--- a/maodez.html
+++ b/maodez.html
@@ -20,6 +20,10 @@
 
 <title>Maodez — Le Testament d’Azénor</title>
 
+<link href="https://fonts.googleapis.com" rel="preconnect"/>
+<link crossorigin href="https://fonts.gstatic.com" rel="preconnect"/>
+<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Inter:wght@300;400;500&display=swap" rel="stylesheet"/>
+
 <link href="css/style.css?v=20260115" rel="stylesheet"/>
 </head>
 
