--- a/umbertus.html
+++ b/umbertus.html
@@ -306,7 +306,10 @@ a.lien-discret-orange:focus{
   display:none !important;
 }
 </style>
-
+<style>
+/* Harmonisation locale Maodez : intertitres du bloc explicatif */
+.personnage .character-context h3{ color:#fff; }
+</style>
 </meta></meta></head>
 <body class="personnage">
 <header class="site-header">
