--- a/gwenc_hlan.html
+++ b/gwenc_hlan.html
@@ -1,25 +1,31 @@
 <!DOCTYPE html>
 
-<html lang="fr"><head>
+<html lang="fr">
+<head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 
   <meta name="description" content="Gwenc’hlan — Le Testament d’Azénor — page du site officiel du Testament d’Azénor : univers, personnages et ressources.">
-  <link rel="canonical" href="https://alain7544.azenor.org/gwenc_hlan.html">
+  <link rel="canonical" href="https://azenor.org/gwenc_hlan.html">
+  <link rel="alternate" hreflang="fr" href="https://azenor.org/gwenc_hlan.html">
+  <link rel="alternate" hreflang="en" href="https://azenor.org/en/gwenc_hlan.html">
   <meta property="og:locale" content="fr_FR">
   <meta property="og:type" content="article">
   <meta property="og:title" content="Gwenc’hlan — Le Testament d’Azénor">
   <meta property="og:description" content="Gwenc’hlan — Le Testament d’Azénor — page du site officiel du Testament d’Azénor : univers, personnages et ressources.">
-  <meta property="og:url" content="https://alain7544.azenor.org/gwenc_hlan.html">
+  <meta property="og:url" content="https://azenor.org/gwenc_hlan.html">
   <meta property="og:site_name" content="Le Testament d’Azénor">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Gwenc’hlan — Le Testament d’Azénor">
   <meta name="twitter:description" content="Gwenc’hlan — Le Testament d’Azénor — page du site officiel du Testament d’Azénor : univers, personnages et ressources.">
+
 <title>Gwenc’hlan — Le Testament d’Azénor</title>
+
 <link href="https://fonts.googleapis.com" rel="preconnect"/>
 <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
 <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400&700&amp&family=Inter:wght@300&400&500&amp&display=swap" rel="stylesheet"/>
 <link href="css/style.css?v=20260115" rel="stylesheet"/>
+
 <style>
 /* ===== FOOTER AMÉLIORÉ ===== */
 .site-footer{
@@ -27,7 +33,6 @@
   margin-top:4rem;
   padding:1.5rem 0;
 }
-
 .site-footer .footer-inner{
   max-width:1200px;
   margin:0 auto;
@@ -36,13 +41,11 @@
   justify-content:space-between;
   align-items:center;
 }
-
 .footer-left{
   display:flex;
   align-items:center;
   gap:1rem;
 }
-
 .like-btn{
   background:none;
   border:1px solid #f28c28;
@@ -50,14 +53,12 @@
   padding:0.4rem 0.8rem;
   cursor:pointer;
 }
-
 .social-icons a{
   color:#f28c28;
   font-size:1.1rem;
   text-decoration:none;
   margin-right:0.6rem;
 }
-
 .footer-right .buy-btn{
   background:#f28c28;
   color:#000;
@@ -66,6 +67,7 @@
   font-weight:500;
 }
 </style>
+
 <style>
 /* ===== FOOTER AMÉLIORÉ v2 ===== */
 .site-footer{
@@ -73,7 +75,6 @@
   margin-top:4rem;
   padding:1.6rem 0;
 }
-
 .site-footer .footer-inner{
   max-width:1200px;
   margin:0 auto;
@@ -82,13 +83,11 @@
   justify-content:space-between;
   align-items:center;
 }
-
 .footer-left{
   display:flex;
   align-items:center;
   gap:1.2rem;
 }
-
 .like-btn{
   background:none;
   border:1px solid #f28c28;
@@ -97,7 +96,6 @@
   cursor:pointer;
   font-size:0.9rem;
 }
-
 /* Social icons as round glyphs */
 .social-icons a{
   display:inline-flex;
@@ -112,7 +110,6 @@
   font-weight:600;
   text-decoration:none;
 }
-
 /* Buy button: grey relief, orange text */
 .footer-right .buy-btn{
   background:linear-gradient(#3a3a3a, #1f1f1f);
@@ -124,6 +121,7 @@
   box-shadow:0 2px 4px rgba(0,0,0,0.6);
 }
 </style>
+
 <style>
 .social-icons .icon{
   display:inline-flex;
@@ -141,133 +139,41 @@
   fill:#f28c28;
 }
 </style>
+
 <style>
 /* --- CORRECTION : IMAGE DE FOND JUSQU'AU FOOTER --- */
 main{
   margin-bottom: 0 !important;
   padding-bottom: 0 !important;
 }
-
 .site-footer{
   margin-top: 0 !important;
 }
 </style>
+
 <style>
-/* ===== FOOTER AMÉLIORÉ ===== */
-.site-footer{
-  background:#000;
-  margin-top:4rem;
-  padding:1.5rem 0;
-}
-
-.site-footer .footer-inner{
-  max-width:1200px;
-  margin:0 auto;
-  padding:0 1.5rem;
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-}
-
-.footer-left{
-  display:flex;
-  align-items:center;
-  gap:1rem;
-}
-
-.like-btn{
-  background:none;
-  border:1px solid #f28c28;
+/* Lien discret orange (sans soulignage) */
+a.lien-discret-orange{
+  text-decoration:none;
   color:#f28c28;
-  padding:0.4rem 0.8rem;
   cursor:pointer;
 }
-
-.social-icons a{
-  color:#f28c28;
-  font-size:1.1rem;
-  text-decoration:none;
-  margin-right:0.6rem;
+a.lien-discret-orange:hover{
+  opacity:0.85;
 }
-
-.footer-right .buy-btn{
-  background:#f28c28;
-  color:#000;
-  padding:0.6rem 1.2rem;
-  text-decoration:none;
-  font-weight:500;
+a.lien-discret-orange:focus{
+  outline:none;
+  text-decoration:underline;
 }
 </style>
+
 <style>
-/* ===== FOOTER AMÉLIORÉ v2 ===== */
-.site-footer{
-  background:#000;
-  margin-top:4rem;
-  padding:1.6rem 0;
-}
-
-.site-footer .footer-inner{
-  max-width:1200px;
-  margin:0 auto;
-  padding:0 1.5rem;
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-}
-
-.footer-left{
-  display:flex;
-  align-items:center;
-  gap:1.2rem;
-}
-
-.like-btn{
-  background:none;
-  border:1px solid #f28c28;
-  color:#f28c28;
-  padding:0.35rem 0.7rem;
-  cursor:pointer;
-  font-size:0.9rem;
-}
-
-/* Social icons as round glyphs */
-.social-icons a{
-  display:inline-flex;
-  align-items:center;
-  justify-content:center;
-  width:28px;
-  height:28px;
-  border-radius:50%;
-  border:1px solid #f28c28;
-  color:#f28c28;
-  font-size:0.85rem;
-  font-weight:600;
-  text-decoration:none;
-}
-
-/* Buy button: grey relief, orange text */
-.footer-right .buy-btn{
-  background:linear-gradient(#3a3a3a, #1f1f1f);
-  color:#f28c28;
-  padding:0.55rem 1.2rem;
-  text-decoration:none;
-  font-weight:500;
-  border-radius:3px;
-  box-shadow:0 2px 4px rgba(0,0,0,0.6);
-}
+/* Harmonisation locale : intertitres du bloc explicatif */
+.personnage .character-context h3{ color:#fff; }
 </style>
-<style>
-/* --- CORRECTION : IMAGE DE FOND JUSQU'AU FOOTER --- */
-main{
-  margin-bottom: 0 !important;
-  padding-bottom: 0 !important;
-}
 
-.site-footer{
-  margin-top: 0 !important;
-}
-</style>
 </head>
+
 <body class="personnage">
 <header class="site-header">
 <nav class="nav">
@@ -280,17 +186,56 @@ main{
 <a href="livre-des-conquetes.html">livre des<span>conquêtes</span></a>
 <a href="veritable-legende-azenor.html">la légende<span>d’azénor</span></a>
 <a href="bibliographie.html">bibliographie</a>
-<a href="making-off.html">making off</a>
+<a href="making-off.html">making of</a>
 <a href="contact.html">contact</a>
 </div>
 </nav>
 </header>
+
 <main>
-<h1>Gwenc’hlan</h1>
-<div class="cover"><div class="muted">Illustration à intégrer.</div></div>
-<p class="muted">Extrait du roman (à insérer) :</p>
-<p>—</p>
+<section class="character-grid">
+<div class="portrait">
+<img alt="Portrait de Gwenc’hlan" src="images/personnages/gwenc_hlan.jpg"/>
+</div>
+
+<div class="extrait excerpt">
+<h2 class="character-name">Gwenc’hlan</h2>
+
+<p>On le disait barde — et l’on disait aussi prophète. Il vivait à la lisière des hommes, dans ce pays de Tréguier où la lande et la mer semblent se parler. Gwenc’hlan ne cherchait pas à convaincre&nbsp;: il annonçait. Sa parole, plus coupante qu’une lame, laissait derrière elle un malaise — comme si elle venait d’un lieu trop ancien pour être apaisé.</p>
+
+<p>Il n’aimait ni l’ordre ni les certitudes. Il parlait d’un monde qui se retourne, d’un temps où les signes ne mentent plus, et où la violence sort des mots. Aveugle ou clairvoyant, légendaire ou réel, il demeurait une menace&nbsp;: l’idée qu’une mémoire païenne puisse survivre, sous la cendre, et réclamer un jour sa part.</p>
+
+</div>
+
+<!-- Optionnel : mini renvoi discret (tu peux supprimer si tu ne veux rien ici) -->
+<p class="umbertus-cta2">
+  <a href="veritable-legende-azenor.html" class="lien-discret-orange">Ici, la frontière entre histoire et légende est volontairement fragile.</a>
+</p>
+
+</section>
+
+<section class="character-context">
+
+<h3>Un barde de Tréguier</h3>
+<p>Gwenc’hlan (parfois nommé Kian, Guinclaff ou Gwynglaff selon les traditions) est un personnage légendaire qu’on situe volontiers au VI<sup>e</sup> siècle, sur la côte du Trégor, «&nbsp;entre Roc’h-Allaz et Porz-Gwenn&nbsp;». Il apparaît comme une figure de la parole ancienne&nbsp;: celle qui précède l’écriture, la doctrinalisation, et le récit officiel.</p>
+
+<h3>La “Prophétie de Gwenc’hlan”</h3>
+<p>Dans la tradition popularisée par Hersart de La Villemarqué (<em>Barzaz-Breiz</em>), Gwenc’hlan est emprisonné et aveuglé pour avoir refusé la conversion. Sa plainte devient prophétie&nbsp;: visions de renversements, de violences, d’un monde qui se déglingue — et promesse d’une vengeance symbolique. Le texte frappe moins par ses “prédictions” que par sa puissance d’évocation.</p>
+
+<h3>Authenticité, réécritures, controverses</h3>
+<p>La question de l’authenticité du <em>Barzaz-Breiz</em> a longtemps divisé. Francis Gourvil a soutenu une thèse très critique, voyant dans Gwenc’hlan une construction littéraire. D’autres travaux (notamment ceux qui ont pris en compte les carnets de collecte et les strates de transmission) invitent à une lecture moins binaire&nbsp;: tradition orale, réécritures, “mise au point” romantique… et peut-être, à l’origine, un noyau populaire réel.</p>
+
+<h3>Le “Dialogue avec le roi Arthur”</h3>
+<p>Un autre texte, copié au XV<sup>e</sup> siècle (et redécouvert au XX<sup>e</sup>), met en scène un dialogue entre Arthur et Gwynglaff. Il ne prouve pas l’existence historique du barde, mais confirme l’importance d’un motif&nbsp;: l’homme sauvage, prophétique, placé sur la crête entre mythe et politique.</p>
+
+<h3>Rôle dans le roman</h3>
+<p>Dans <em>Le Testament d’Azénor</em>, Gwenc’hlan n’est pas une “archive”. Il est une <strong>pression</strong> exercée sur l’époque&nbsp;: l’ombre d’une parole païenne, indocile, qui contredit l’idée d’une conversion nette et pacifiée. Sa présence introduit une inquiétude&nbsp;: et si le christianisme imposé n’avait pas tout recouvert&nbsp;?</p>
+
+<p>Gwenc’hlan est, au fond, une question posée au récit&nbsp;: <em>qui écrit l’histoire&nbsp;? et qui a le droit de dire l’avenir&nbsp;?</em></p>
+
+</section>
 </main>
+
 <footer class="site-footer">
 <div class="footer-inner">
 <div class="footer-left">
@@ -321,4 +266,6 @@ main{
 </div>
 </div>
 </footer>
-</body></html>
+
+</body>
+</html>
