--- a/gwenc_hlan.html
+++ b/gwenc_hlan.html
@@ -234,6 +234,22 @@ a.lien-discret-orange:focus{
 <p>Gwenc’hlan est, au fond, une question posée au récit&nbsp;: <em>qui écrit l’histoire&nbsp;? et qui a le droit de dire l’avenir&nbsp;?</em></p>
 
 </section>
+  <h3>Rôle dans le roman</h3>
+<p>… dernier paragraphe …</p>
+
+<p class="umbertus-cta2">
+  Pour approfondir :
+  <a href="http://chrsouchon.free.fr/gwenlaf.htm" target="_blank" rel="noopener" class="lien-discret-orange">
+    Christian Souchon, « Gwenc’hlan »
+  </a>,
+  et
+  <a href="https://www.persee.fr/doc/abpo_0003-391x_1925_num_37_3_1618" target="_blank" rel="noopener" class="lien-discret-orange">
+    R. Largillière, Annales de Bretagne, 1925, p. 288-308
+  </a>.
+</p>
+
+</section>
+</main>
 </main>
 
 <footer class="site-footer">
