--- a/gwenc_hlan.html
+++ b/gwenc_hlan.html
@@ -201,9 +201,10 @@ a.lien-discret-orange:focus{
 <div class="extrait excerpt">
 <h2 class="character-name">Gwenc’hlan</h2>
 
-<p>On le disait barde — et l’on disait aussi prophète. Il vivait à la lisière des hommes, dans ce pays de Tréguier où la lande et la mer semblent se parler. Gwenc’hlan ne cherchait pas à convaincre&nbsp;: il annonçait. Sa parole, plus coupante qu’une lame, laissait derrière elle un malaise — comme si elle venait d’un lieu trop ancien pour être apaisé.</p>
+<p>« Son nom est Gwenc'hlan. C’est un barde, un homme du passé… »</p>
 
-<p>Il n’aimait ni l’ordre ni les certitudes. Il parlait d’un monde qui se retourne, d’un temps où les signes ne mentent plus, et où la violence sort des mots. Aveugle ou clairvoyant, légendaire ou réel, il demeurait une menace&nbsp;: l’idée qu’une mémoire païenne puisse survivre, sous la cendre, et réclamer un jour sa part.</p>
+<p>Budoc se raidit. Ce n’était pas n’importe quel barde. Gwenc’hlan était renommé pour ses prophéties… Les bardes n’étaient pas de simples conteurs, ils étaient les dépositaires des légendes, les derniers héritiers des druides, ceux qui se souvenaient des temps où les rois celtes prêtaient serment sous la loi des poètes. Cependant, il n’était pas là pour parler de Gwenc'hlan.</p>
+</p>
 
 </div>
 
