--- a/gwenc_hlan.html
+++ b/gwenc_hlan.html
@@ -201,10 +201,9 @@ a.lien-discret-orange:focus{
 <div class="extrait excerpt">
 <h2 class="character-name">Gwenc’hlan</h2>
 
-<p>« Son nom est Gwenc'hlan. C’est un barde, un homme du passé… »</p>
+<p> Son nom est Gwenc'hlan. C’est un barde, un homme du passé… </p>
 
 <p>Budoc se raidit. Ce n’était pas n’importe quel barde. Gwenc’hlan était renommé pour ses prophéties… Les bardes n’étaient pas de simples conteurs, ils étaient les dépositaires des légendes, les derniers héritiers des druides, ceux qui se souvenaient des temps où les rois celtes prêtaient serment sous la loi des poètes. Cependant, il n’était pas là pour parler de Gwenc'hlan.</p>
-</p>
 
 </div>
 
