--- a/gwenc_hlan.html
+++ b/gwenc_hlan.html
@@ -204,7 +204,15 @@ a.lien-discret-orange:focus{
 <p>« Son nom est Gwenc’hlan. C’est un barde, un homme du passé… »</p>
 
 <p>Budoc se raidit. Ce n’était pas n’importe quel barde. Gwenc’hlan était renommé pour ses prophéties… Les bardes n’étaient pas de simples conteurs, ils étaient les dépositaires des légendes, les derniers héritiers des druides, ceux qui se souvenaient des temps où les rois celtes prêtaient serment sous la loi des poètes. Cependant, il n’était pas là pour parler de Gwenc’hlan.</p>
+<p>— « Toi, roi Deroch, tu me juges coupable parce que j’ai parlé, parce que j’ai prédit. Mais moi, je n’ai jamais tué. J’ai dit ce que les vents chuchotent aux chênes, ce que les rivières murmurent aux rochers. J’ai lu dans les étoiles ce que d’autres ont refusé de voir… »</p>
 
+<p>Il marqua une pause, scrutant l’assemblée, et poursuivit :</p>
+
+<p>— « Tu me demandes de renier mes divinités, mais elles sont plus anciennes que ta religion. Elles étaient là bien avant que ton Christ ne foule la terre. Elles sont dans l’océan qui gronde, dans la foudre qui frappe les sommets, dans le chant du corbeau et la danse des saisons… »</p>
+
+<p>Il se redressa fièrement, dominant un instant tous ceux qui l’entouraient.</p>
+
+<p>— « Renier mes dieux, ce serait renier ma voix, renier la vérité elle-même. Ce serait me trahir et trahir ceux qui, depuis des générations, ont porté la parole des druides et des bardes. »</p>
 </div>
 
 
