--- a/lavret.html
+++ b/lavret.html
@@ -6,7 +6,7 @@
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 
   <meta name="description" content="L’île Lavrec dans l’archipel de Bréhat — page du site officiel du Testament d’Azénor : univers, personnages et ressources.">
-  <link rel="canonical" href="https://alain7544.azenor.org/lavret.html">
+  <link rel="canonical" href="https://azenor.org/lavret.html">
   <meta property="og:locale" content="fr_FR">
   <meta property="og:type" content="article">
   <meta property="og:title" content="L’île Lavrec dans l’archipel de Bréhat | Le Testament d’Azénor">
@@ -318,6 +318,54 @@ main{
 <div class='\"lieu-wrapper\"'>
 <h1 class="lieu-title">L’île Lavrec dans l’archipel de Bréhat</h1>
 <div class="map-full"><img alt="Carte : Lavret" src="images/cartes/lavret.jpg"/></div>
+  <section class="lieu-content" style="max-width:900px;margin:3rem auto;line-height:1.7;font-size:1.05rem;">
+  <h2 style="color:#f28c28;font-family:'Libre Baskerville',serif;margin-bottom:1.5rem;">
+    Lavret : vestiges, circulations et mémoire des ruines
+  </h2>
+
+  <p>
+    Les recherches entreprises par Arthur de La Borderie à la fin du XIXᵉ siècle,
+    puis les campagnes méthodiques dirigées par Pierre-Roland Giot entre 1977 et 1984,
+    ont révélé la profondeur historique insoupçonnée de l’île de Lavret.
+  </p>
+
+  <p>
+    Sous les niveaux médiévaux sont apparus les vestiges d’une occupation antique structurée,
+    probablement une villa des IIIᵉ–IVᵉ siècles. Les fouilles ont livré de nombreuses pièces de monnaie,
+    ainsi qu’un mobilier varié — céramiques, fragments architecturaux, objets domestiques —
+    témoignant d’un établissement inséré dans les circuits économiques de l’Antiquité tardive.
+  </p>
+
+  <p>
+    La présence de ces monnaies, parfois frappées loin de l’Armorique,
+    rappelle que même une île aujourd’hui perçue comme périphérique participait alors
+    à des réseaux d’échanges à grande échelle, maritimes et terrestres.
+    Lavret n’était pas un bout du monde : elle était un point d’ancrage dans une géographie ouverte.
+  </p>
+
+  <p>
+    À cette occupation antique succède, au haut Moyen Âge, un espace funéraire dense.
+    Les nombreuses sépultures mises au jour — adultes et enfants,
+    inhumés selon une orientation chrétienne primitive —
+    attestent d’une communauté organisée et durable.
+  </p>
+
+  <p>
+    Parmi les objets découverts figure une pendeloque retrouvée en contexte funéraire.
+    Son style et sa typologie ont intrigué Giot :
+    elle paraît davantage relever d’un horizon culturel franc que strictement armoricain.
+    Sa présence sur une île bretonne du haut Moyen Âge suggère des circulations d’hommes,
+    d’objets et d’influences bien plus vastes que ne le laisserait supposer l’apparente insularité du lieu.
+  </p>
+
+  <p>
+    C’est précisément cette stratification — ruines antiques réutilisées,
+    nécropole chrétienne, objet venu d’ailleurs —
+    qui a nourri l’intrigue du roman.
+    Lavret incarne cette tension permanente entre enracinement et circulation,
+    isolement et connexion, mémoire des pierres et mouvement des hommes.
+  </p>
+</section>
 </div>
 </main>
 <footer class="site-footer">
